<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quản Lý Dự Án</string>
    <string name="txt_binh_luan_cong_viec">Bình luận công việc</string>
    <string name="txt_gui">Gửi</string>
    <string name="txt_nhap_binh_luan">Nhập bình luận...</string>
    <string name="txt_them_cong_viec">Thêm công việc</string>
    <string name="txt_thoi_han_deadline">Thời hạn (Deadline)</string>
    <string name="txt_chon_ngay_hoan_thanh">Chọn ngày hoàn thành</string>
    <string name="txt_o_uu_tien">Độ ưu tiên</string>
    <string name="txt_cao">Cao</string>
    <string name="txt_trung_binh">Trung bình</string>
    <string name="txt_thap">Thấp</string>
    <string name="txt_trang_thai">Trạng thái</string>
    <string name="txt_tu_do">Tự do</string>
    <string name="txt_ang_lam">Đang làm</string>
    <string name="txt_hoan_thanh">Hoàn thành</string>
    <string name="txt_luu_cong_viec">LƯU CÔNG VIỆC</string>
    <string name="txt_ten_cong_viec">Tên công việc</string>
    <string name="txt_mo_ta_chi_tiet">Mô tả chi tiết</string>
    <string name="txt_quan_ly_du_an">QUẢN LÝ DỰ ÁN</string>
    <string name="txt_chao_mung_tro_lai">Chào mừng trở lại! 👋</string>
    <string name="txt_ang_nhap">ĐĂNG NHẬP</string>
    <string name="txt_hoac_ang_nhap_bang">hoặc đăng nhập bằng</string>
    <string name="txt_google">Google</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_chua_co_tai_khoan_an">Chưa có tài khoản? Đăng ký ngay!</string>
    <string name="txt_email_tai_khoan">Email tài khoản</string>
    <string name="txt_mat_khau">Mật khẩu</string>
    <string name="txt_du_an_cua_toi">Dự án của tôi</string>
    <string name="txt_quan_ly_tien_o_va_ph">Quản lý tiến độ và phân quyền thành viên</string>
    <string name="txt_tao_tai_khoan_moi">Tạo tài khoản mới 🚀</string>
    <string name="txt_ang_ky_tai_khoan">ĐĂNG KÝ TÀI KHOẢN</string>
    <string name="txt_hoac_ang_ky_bang">hoặc đăng ký bằng</string>
    <string name="txt_a_co_tai_khoan_ang_n">Đã có tài khoản? Đăng nhập ngay!</string>
    <string name="txt_ten_ang_nhap_ho_ten">Tên đăng nhập / Họ tên</string>
    <string name="txt_email_lien_he">Email liên hệ</string>
    <string name="txt_nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="txt_nguyen_van_a">Nguyễn Văn A</string>
    <string name="txt_a_nguyen_email_com">a.nguyen@email.com</string>
    <string name="txt_thanh_vien_chinh_thu">⚡ Thành viên chính thức</string>
    <string name="txt_ang_hoat_ong_quyet_t">🟢 Đang hoạt động • 🎯 Quyết tâm hoàn thành đúng hạn</string>
    <string name="txt_du_an">Dự án</string>
    <string name="txt_viec_xong">Việc xong</string>
    <string name="txt_tai_khoan_amp_bao_ma">TÀI KHOẢN &amp; BẢO MẬT</string>
    <string name="txt_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="txt_oi_mat_khau_amp_bao_">Đổi mật khẩu &amp; Bảo mật</string>
    <string name="txt_nhat_ky_ang_nhap">Nhật ký đăng nhập</string>
    <string name="txt_tuy_chinh_amp_giao_d">TÙY CHỈNH &amp; GIAO DIỆN</string>
    <string name="txt_lich_su_du_an_amp_ba">Lịch sử dự án &amp; Báo cáo</string>
    <string name="txt_cai_at_thong_bao">Cài đặt thông báo</string>
    <string name="txt_bat">Bật</string>
    <string name="txt_ngon_ngu_ung_dung">Ngôn ngữ ứng dụng</string>
    <string name="txt_tieng_viet">Tiếng Việt</string>
    <string name="txt_che_o_toi_dark_mode">Chế độ tối (Dark Mode)</string>
    <string name="txt_tat">Tắt</string>
    <string name="txt_he_thong_amp_ho_tro">HỆ THỐNG &amp; HỖ TRỢ</string>
    <string name="txt_tro_giup_amp_phan_ho">Trợ giúp &amp; Phản hồi</string>
    <string name="txt_ieu_khoan_amp_chinh_">Điều khoản &amp; Chính sách</string>
    <string name="txt_i">ℹ️</string>
    <string name="txt_thong_tin_ung_dung">Thông tin ứng dụng</string>
    <string name="txt_v1_0_0">v1.0.0</string>
    <string name="txt_ang_xuat">ĐĂNG XUẤT</string>
    <string name="txt_them_thanh_vien_moi">Thêm thành viên mới</string>
    <string name="txt_leader">LEADER</string>
    <string name="txt_member">MEMBER</string>
    <string name="txt_huy">Hủy</string>
    <string name="txt_them">Thêm</string>
    <string name="txt_email_thanh_vien">Email thành viên</string>
    <string name="txt_cong_viec">Công việc</string>
    <string name="txt_quan_ly_cong_viec_du">Quản lý công việc dự án</string>
    <string name="txt_tat_ca">Tất cả</string>
    <string name="txt_tat_ca_uu_tien">Tất cả ưu tiên</string>
    <string name="txt_sap_xep">Sắp xếp</string>
    <string name="txt_chua_co_cong_viec">Chưa có công việc</string>
    <string name="txt_nhan_nut_e_tao_cong_">Nhấn nút + để tạo công việc đầu tiên</string>
    <string name="txt_tim_kiem_cong_viec">Tìm kiếm công việc</string>
    <string name="txt_ten_du_an">Tên dự án</string>
    <string name="txt_mo_ta_du_an">Mô tả dự án...</string>
    <string name="txt_ang_thuc_hien">Đang thực hiện</string>
    <string name="txt_thong_tin_ca_nhan_1">Thông Tin Cá Nhân</string>
    <string name="txt_ma_tai_khoan_1">Mã tài khoản: #1</string>
    <string name="txt_thong_tin_ho_so">THÔNG TIN HỒ SƠ</string>
    <string name="txt_luu_thay_oi">LƯU THAY ĐỔI</string>
    <string name="txt_ho_va_ten">Họ và tên</string>
    <string name="txt_oi_mat_khau">Đổi Mật Khẩu</string>
    <string name="txt_e_bao_ve_tai_khoan_h">Để bảo vệ tài khoản, hãy đặt mật khẩu mới mạnh có ít nhất 6 ký tự và không chia sẻ cho người khác.</string>
    <string name="txt_thong_tin_bao_mat">THÔNG TIN BẢO MẬT</string>
    <string name="txt_xac_nhan_oi_mat_khau">XÁC NHẬN ĐỔI MẬT KHẨU</string>
    <string name="txt_mat_khau_hien_tai">Mật khẩu hiện tại</string>
    <string name="txt_mat_khau_moi">Mật khẩu mới</string>
    <string name="txt_xac_nhan_mat_khau_mo">Xác nhận mật khẩu mới</string>
    <string name="txt_chi_tiet_cong_viec">Chi tiết công việc</string>
    <string name="txt_thoi_han">Thời hạn</string>
    <string name="txt_deadline">Deadline</string>
    <string name="txt_xem_binh_luan">Xem bình luận</string>
    <string name="txt_cap_nhat">CẬP NHẬT</string>
    <string name="txt_xoa_cong_viec">XÓA CÔNG VIỆC</string>
    <string name="txt_mo_ta">Mô tả</string>
    <string name="txt_ten_nguoi_dung">Tên người dùng</string>
    <string name="txt_ay_la_noi_dung_binh_">Đây là nội dung bình luận mẫu...</string>
    <string name="txt_10_30_am">10:30 AM</string>
    <string name="txt_xin_chao">Xin chào! 👋</string>
    <string name="txt_chuc_ban_mot_ngay_la">Chúc bạn một ngày làm việc hiệu quả</string>
    <string name="txt_bang_ieu_khien_quan_">BẢNG ĐIỀU KHIỂN QUẢN TRỊ VIÊN</string>
    <string name="txt_bao_cao_so_lieu_toan">Báo cáo số liệu toàn bộ hệ thống</string>
    <string name="txt_tai_khoan">👥 Tài khoản</string>
    <string name="txt_du_an_1">📁 Dự án</string>
    <string name="txt_cong_viec_1">📝 Công việc</string>
    <string name="txt_danh_sach_user">👥 Danh sách User</string>
    <string name="txt_du_an_he_thong">📁 Dự án hệ thống</string>
    <string name="txt_du_an_2">📂 Dự án</string>
    <string name="txt_viec_chua_lam">📝 Việc chưa làm</string>
    <string name="txt_hoan_thanh_1">✅ Hoàn thành</string>
    <string name="txt_uu_tien_cao">🔥 Ưu tiên cao</string>
    <string name="txt_tien_o_hoan_thanh_ch">📊 Tiến độ hoàn thành chung</string>
    <string name="txt_loi_tat_thao_tac">Lối tắt thao tác</string>
    <string name="txt_tao_du_an">Tạo dự án</string>
    <string name="txt_them_viec">Thêm việc</string>
    <string name="txt_oi_ngu">Đội ngũ</string>
    <string name="txt_lich_su">Lịch sử</string>
    <string name="txt_du_an_gan_ay">Dự án gần đây</string>
    <string name="txt_xem_tat_ca">Xem tất cả ›</string>
    <string name="txt_cong_viec_moi_nhat">Công việc mới nhất</string>
    <string name="txt_chua_co_lich_su_hoat">Chưa có lịch sử hoạt động</string>
    <string name="txt_lich_su_du_an">Lịch sử dự án</string>
    <string name="txt_tieu_e_hoat_ong">Tiêu đề hoạt động</string>
    <string name="txt_mo_ta_chi_tiet_hoat_">Mô tả chi tiết hoạt động...</string>
    <string name="txt_them_du_an_moi">Thêm dự án mới</string>
    <string name="txt_ban_se_uoc_gan_lam_a">* Bạn sẽ được gán làm ADMIN dự án này.</string>
    <string name="txt_tao_du_an_1">TẠO DỰ ÁN</string>
    <string name="txt_ten_du_an_bat_buoc">Tên dự án (Bắt buộc)</string>
    <string name="txt_mo_ta_muc_tieu_du_an">Mô tả mục tiêu dự án</string>
    <string name="txt_so_luong_thanh_vien_">Số lượng thành viên dự kiến</string>
    <string name="txt_trang_thai_ban_au">Trạng thái ban đầu</string>
    <string name="txt_ngay_bat_au">Ngày bắt đầu</string>
    <string name="txt_ngay_ket_thuc">Ngày kết thúc</string>
    <string name="txt_thiet_ke_giao_dien_l">Thiết kế giao diện Login</string>
    <string name="txt_thiet_ke_giao_dien_a">Thiết kế giao diện đăng nhập cho ứng dụng.</string>
</resources>
